// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sync lambda arn resource creates the correct lambda arn substitution 1`] = `
Object {
  "Fn::If": Array [
    "HasEnvironmentParameter",
    Object {
      "Fn::Sub": Array [
        "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:myLambda-\${env}",
        Object {
          "env": Object {
            "Ref": "env",
          },
        },
      ],
    },
    Object {
      "Fn::Sub": Array [
        "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:myLambda",
        Object {},
      ],
    },
  ],
}
`;

exports[`sync resolver config creates the correct lambda resolver config 1`] = `
Object {
  "ConflictDetection": "VERSION",
  "ConflictHandler": "LAMBDA",
  "LambdaConflictHandlerConfig": Object {
    "LambdaConflictHandlerArn": Object {
      "Fn::If": Array [
        "HasEnvironmentParameter",
        Object {
          "Fn::Sub": Array [
            "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:myLambda-\${env}",
            Object {
              "env": Object {
                "Ref": "env",
              },
            },
          ],
        },
        Object {
          "Fn::Sub": Array [
            "arn:aws:lambda:\${AWS::Region}:\${AWS::AccountId}:function:myLambda",
            Object {},
          ],
        },
      ],
    },
  },
}
`;
